--- a/index.html
+++ b/index.html
@@ -4,57 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafshan Rahman Sakib - Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-        section {
-            padding: 20px;
-        }
-
-        h2 {
-            color: #333;
-        }
-
-        .project {
-            margin-bottom: 20px;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -62,6 +12,7 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -70,35 +21,44 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>
-            I am a Computer Science and Engineering graduate from Sonargaon University. Passionate about technology and programming, I have experience in Android application development, hardware and software management, and SQL database management. I have also worked on automation projects and have proficiency in C and C++ programming languages.
+        <p>My name is Md Rafshan Rahman Sakib, a recent graduate in Computer Science and Engineering from Sonargaon University. I am actively pursuing opportunities to leverage my expertise in Android application development, SQL Database management, and hardware/software administration, etc.
         </p>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Android Application Development</li>
+            <li>Microsoft Office</li>
+            <li>Hardware and Software Management</li>
+            <li>Automation Project</li>
+            <li>SQL Database</li>
+            <li>C Programming Language</li>
+            <li>Networking and Communication</li>
+            <li>C++ Programming</li>
+        </ul>
     </section>
 
     <section id="projects">
         <h2>Projects</h2>
-        <div class="project">
-            <h3>IoT Based Water Quality Monitoring System</h3>
-            <p>This project involved developing a system to monitor the quality of water using IoT devices.</p>
-        </div>
-        <div class="project">
-            <h3>Inventory and Expense Tracking System</h3>
-            <p>An application designed to track inventory and expenses efficiently.</p>
-        </div>
-    </section>
-
-    <section id="contact">
-        <h2>Contact Information</h2>
         <ul>
-            <li>Address: 0602-01, College Road Bylane – Jamalpur Sadar, Jamalpur 2000</li>
-            <li>Phone: +8801765844547</li>
-            <li>Email: mdrafshanrahmamsakib0005@gmail.com</li>
-            <li>GitHub: <a href="https://github.com/rafshan0005">rafshan0005</a></li>
+            <li>IoT Based Water Quality Monitoring System</li>
+            <li>Inventory and Expense Tracking System</li>
         </ul>
     </section>
 
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Location: Jamalpur Sadar, Jamalpur 2000</p>
+        <p>Email: mdrafshanrahmamsakib0005@gmail.com</p>
+        <p>Phone: 01765844547</p>
+    </section>
+
     <footer>
-        <p>&copy; 2024 Rafshan Rahman Sakib - Portfolio</p>
+        <p>&copy; 2024 Rafshan Rahman Sakib</p>
     </footer>
+
+    <!-- Placeholder for JavaScript -->
+    <script src="script.js"></script>
 </body>
 </html>
