--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <header>
         <div class="container">
-            <img src="your_photo.jpg" alt="Rafshan Rahman Sakib" class="profile-img">
-            <h1>Rafshan Rahman Sakib</h1>
+            <div class="profile">
+                <img src="your_photo.jpg" alt="Rafshan Rahman Sakib" class="profile-img">
+                <h1>Rafshan Rahman Sakib</h1>
+            </div>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -22,14 +24,14 @@
         </div>
     </header>
 
-    <section id="about">
+    <section id="about" class="content">
         <div class="container">
             <h2>About Me</h2>
             <p>My name is Md Rafshan Rahman Sakib, a recent graduate in Computer Science and Engineering from Sonargaon University. I am actively pursuing opportunities to leverage my expertise in Android application development, SQL Database management, and hardware/software administration, etc.</p>
         </div>
     </section>
 
-    <section id="skills">
+    <section id="skills" class="content">
         <div class="container">
             <h2>Skills</h2>
             <ul>
@@ -45,7 +47,7 @@
         </div>
     </section>
 
-    <section id="projects">
+    <section id="projects" class="content">
         <div class="container">
             <h2>Projects</h2>
             <ul>
@@ -55,7 +57,7 @@
         </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="content">
         <div class="container">
             <h2>Contact</h2>
             <p>Location: Jamalpur Sadar, Jamalpur 2000</p>
