--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     <section id="contact" class="content">
         <div class="container">
             <h2>Contact</h2>
-            <p>Location: Jamalpur Sadar, Jamalpur 2000</p>
+            <p>Location: Jamalpur Sadar, Jamalpur - 2000</p>
             <p>Email: mdrafshanrahmamsakib0005@gmail.com</p>
-            <p>Phone: 01765844547</p>
+            
         </div>
     </section>
 
