--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
                 <img src="your_photo.jpg" alt="Rafshan Rahman Sakib" class="profile-img">
                 <h1>Rafshan Rahman Sakib</h1>
             </div>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
     </header>
 
     <section id="about" class="content">
@@ -60,14 +60,17 @@
     <section id="contact" class="content">
         <div class="container">
             <h2>Contact</h2>
-            <p>Location: Jamalpur Sadar, Jamalpur - 2000</p>
+            <p>Location: Jamalpur Sadar, Jamalpur 2000</p>
             <p>Email: mdrafshanrahmamsakib0005@gmail.com</p>
-            
+            <p>Phone: 01765844547</p>
+            <!-- Google Map Placeholder -->
+            <div id="google-map"></div>
         </div>
     </section>
 
     <footer>
         <div class="container">
+            <p class="contact-info">Location: Jamalpur Sadar, Jamalpur 2000 | Email: mdrafshanrahmamsakib0005@gmail.com | Phone: 01765844547</p>
             <p>&copy; 2024 Rafshan Rahman Sakib</p>
         </div>
     </footer>
