--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section id="contact" class="content">
         <div class="container">
             <h2>Contact</h2>
-            <p>Location: Jamalpur Sadar, Jamalpur 2000</p>
+            <p>Location: Jamalpur Sadar, Jamalpur - 2000</p>
             <p>Email: mdrafshanrahmamsakib0005@gmail.com</p>
         
         </div>
